--- a/SOURCE_CODE/Lab1_Ex.ioc
+++ b/SOURCE_CODE/Lab1_Ex.ioc
@@ -11,9 +11,12 @@ Mcu.Package=UFQFPN48
 Mcu.Pin0=PA5
 Mcu.Pin1=PA6
 Mcu.Pin2=PA7
-Mcu.Pin3=VP_SYS_VS_ND
-Mcu.Pin4=VP_SYS_VS_Systick
-Mcu.PinsNb=5
+Mcu.Pin3=PA8
+Mcu.Pin4=PA9
+Mcu.Pin5=PA10
+Mcu.Pin6=VP_SYS_VS_ND
+Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Ux
@@ -30,18 +33,30 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=GREEN_LED2
+PA10.Locked=true
+PA10.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=RED_LED
+PA5.GPIO_Label=RED_LED1
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=YELLOW_LED
+PA6.GPIO_Label=YELLOW_LED1
 PA6.Locked=true
 PA6.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=GREEN_LED
+PA7.GPIO_Label=GREEN_LED1
 PA7.Locked=true
 PA7.Signal=GPIO_Output
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=RED_LED2
+PA8.Locked=true
+PA8.Signal=GPIO_Output
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=YELLOW_LED2
+PA9.Locked=true
+PA9.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
