--- a/SOURCE_CODE/Lab1_Ex.ioc
+++ b/SOURCE_CODE/Lab1_Ex.ioc
@@ -8,15 +8,16 @@ Mcu.IP2=SYS
 Mcu.IPNb=3
 Mcu.Name=STM32F103C6Ux
 Mcu.Package=UFQFPN48
-Mcu.Pin0=PA5
-Mcu.Pin1=PA6
-Mcu.Pin2=PA7
-Mcu.Pin3=PA8
-Mcu.Pin4=PA9
-Mcu.Pin5=PA10
-Mcu.Pin6=VP_SYS_VS_ND
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.PinsNb=8
+Mcu.Pin0=PB0
+Mcu.Pin1=PB1
+Mcu.Pin2=PB2
+Mcu.Pin3=PB3
+Mcu.Pin4=PB4
+Mcu.Pin5=PB5
+Mcu.Pin6=PB6
+Mcu.Pin7=VP_SYS_VS_ND
+Mcu.Pin8=VP_SYS_VS_Systick
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Ux
@@ -33,30 +34,34 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=GREEN_LED2
-PA10.Locked=true
-PA10.Signal=GPIO_Output
-PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=RED_LED1
-PA5.Locked=true
-PA5.Signal=GPIO_Output
-PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=YELLOW_LED1
-PA6.Locked=true
-PA6.Signal=GPIO_Output
-PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=GREEN_LED1
-PA7.Locked=true
-PA7.Signal=GPIO_Output
-PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=RED_LED2
-PA8.Locked=true
-PA8.Signal=GPIO_Output
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=YELLOW_LED2
-PA9.Locked=true
-PA9.Signal=GPIO_Output
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=Port0
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=Port1
+PB1.Locked=true
+PB1.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=Port2
+PB2.Locked=true
+PB2.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=Port3
+PB3.Locked=true
+PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=Port4
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=Port5
+PB5.Locked=true
+PB5.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=Port6
+PB6.Locked=true
+PB6.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
