--- a/SOURCE_CODE/Lab1_Ex.ioc
+++ b/SOURCE_CODE/Lab1_Ex.ioc
@@ -1,5 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=NVIC
@@ -11,13 +12,14 @@ Mcu.Package=UFQFPN48
 Mcu.Pin0=PB0
 Mcu.Pin1=PB1
 Mcu.Pin2=PB2
-Mcu.Pin3=PB3
-Mcu.Pin4=PB4
-Mcu.Pin5=PB5
-Mcu.Pin6=PB6
-Mcu.Pin7=VP_SYS_VS_ND
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.PinsNb=9
+Mcu.Pin3=PA13
+Mcu.Pin4=PA14
+Mcu.Pin5=PB3
+Mcu.Pin6=PB4
+Mcu.Pin7=PB5
+Mcu.Pin8=PB6
+Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.PinsNb=10
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Ux
@@ -34,32 +36,36 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_JTCK-SWCLK
 PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=Port0
+PB0.GPIO_Label=LED_A
 PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=Port1
+PB1.GPIO_Label=LED_B
 PB1.Locked=true
 PB1.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_Label
-PB2.GPIO_Label=Port2
+PB2.GPIO_Label=LED_C
 PB2.Locked=true
 PB2.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=Port3
+PB3.GPIO_Label=LED_D
 PB3.Locked=true
 PB3.Signal=GPIO_Output
 PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=Port4
+PB4.GPIO_Label=LED_E
 PB4.Locked=true
 PB4.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=Port5
+PB5.GPIO_Label=LED_F
 PB5.Locked=true
 PB5.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=Port6
+PB6.GPIO_Label=LED_G
 PB6.Locked=true
 PB6.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
@@ -98,8 +104,6 @@ RCC.IPParameters=APB1Freq_Value,APB2Freq_Value,FamilyName,PLLCLKFreq_Value,PLLMC
 RCC.PLLCLKFreq_Value=8000000
 RCC.PLLMCOFreq_Value=4000000
 RCC.TimSysFreq_Value=8000000
-VP_SYS_VS_ND.Mode=No_Debug
-VP_SYS_VS_ND.Signal=SYS_VS_ND
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
