--- a/SOURCE_CODE/Lab1_Ex.ioc
+++ b/SOURCE_CODE/Lab1_Ex.ioc
@@ -9,17 +9,23 @@ Mcu.IP2=SYS
 Mcu.IPNb=3
 Mcu.Name=STM32F103C6Ux
 Mcu.Package=UFQFPN48
-Mcu.Pin0=PB0
-Mcu.Pin1=PB1
-Mcu.Pin2=PB2
-Mcu.Pin3=PA13
-Mcu.Pin4=PA14
-Mcu.Pin5=PB3
-Mcu.Pin6=PB4
-Mcu.Pin7=PB5
-Mcu.Pin8=PB6
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=10
+Mcu.Pin0=PA5
+Mcu.Pin1=PA6
+Mcu.Pin10=PA14
+Mcu.Pin11=PB3
+Mcu.Pin12=PB4
+Mcu.Pin13=PB5
+Mcu.Pin14=PB6
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin2=PA7
+Mcu.Pin3=PB0
+Mcu.Pin4=PB1
+Mcu.Pin5=PB2
+Mcu.Pin6=PA8
+Mcu.Pin7=PA9
+Mcu.Pin8=PA10
+Mcu.Pin9=PA13
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Ux
@@ -36,10 +42,34 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=LED_GREEN_2
+PA10.Locked=true
+PA10.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=LED_RED_1
+PA5.Locked=true
+PA5.Signal=GPIO_Output
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=LED_YELLOW_1
+PA6.Locked=true
+PA6.Signal=GPIO_Output
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=LED_GREEN_1
+PA7.Locked=true
+PA7.Signal=GPIO_Output
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=LED_RED_2
+PA8.Locked=true
+PA8.Signal=GPIO_Output
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=LED_YELLOW_2
+PA9.Locked=true
+PA9.Signal=GPIO_Output
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LED_A
 PB0.Locked=true
