--- a/SOURCE_CODE/Lab1_Ex.ioc
+++ b/SOURCE_CODE/Lab1_Ex.ioc
@@ -9,23 +9,21 @@ Mcu.IP2=SYS
 Mcu.IPNb=3
 Mcu.Name=STM32F103C6Ux
 Mcu.Package=UFQFPN48
-Mcu.Pin0=PA5
-Mcu.Pin1=PA6
+Mcu.Pin0=PA4
+Mcu.Pin1=PA5
 Mcu.Pin10=PA14
-Mcu.Pin11=PB3
-Mcu.Pin12=PB4
-Mcu.Pin13=PB5
-Mcu.Pin14=PB6
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin2=PA7
-Mcu.Pin3=PB0
-Mcu.Pin4=PB1
-Mcu.Pin5=PB2
-Mcu.Pin6=PA8
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
+Mcu.Pin11=PA15
+Mcu.Pin12=VP_SYS_VS_ND
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin2=PA6
+Mcu.Pin3=PA7
+Mcu.Pin4=PA8
+Mcu.Pin5=PA9
+Mcu.Pin6=PA10
+Mcu.Pin7=PA11
+Mcu.Pin8=PA12
 Mcu.Pin9=PA13
-Mcu.PinsNb=16
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Ux
@@ -43,61 +41,53 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=LED_GREEN_2
+PA10.GPIO_Label=LED_6
 PA10.Locked=true
 PA10.Signal=GPIO_Output
-PA13.Mode=Serial_Wire
-PA13.Signal=SYS_JTMS-SWDIO
-PA14.Mode=Serial_Wire
-PA14.Signal=SYS_JTCK-SWCLK
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=LED_7
+PA11.Locked=true
+PA11.Signal=GPIO_Output
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=LED_8
+PA12.Locked=true
+PA12.Signal=GPIO_Output
+PA13.GPIOParameters=GPIO_Label
+PA13.GPIO_Label=LED_9
+PA13.Locked=true
+PA13.Signal=GPIO_Output
+PA14.GPIOParameters=GPIO_Label
+PA14.GPIO_Label=LED_10
+PA14.Locked=true
+PA14.Signal=GPIO_Output
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=LED_11
+PA15.Locked=true
+PA15.Signal=GPIO_Output
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=LED_0
+PA4.Locked=true
+PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=LED_RED_1
+PA5.GPIO_Label=LED_1
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=LED_YELLOW_1
+PA6.GPIO_Label=LED_2
 PA6.Locked=true
 PA6.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=LED_GREEN_1
+PA7.GPIO_Label=LED_3
 PA7.Locked=true
 PA7.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=LED_RED_2
+PA8.GPIO_Label=LED_4
 PA8.Locked=true
 PA8.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=LED_YELLOW_2
+PA9.GPIO_Label=LED_5
 PA9.Locked=true
 PA9.Signal=GPIO_Output
-PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=LED_A
-PB0.Locked=true
-PB0.Signal=GPIO_Output
-PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=LED_B
-PB1.Locked=true
-PB1.Signal=GPIO_Output
-PB2.GPIOParameters=GPIO_Label
-PB2.GPIO_Label=LED_C
-PB2.Locked=true
-PB2.Signal=GPIO_Output
-PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=LED_D
-PB3.Locked=true
-PB3.Signal=GPIO_Output
-PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=LED_E
-PB4.Locked=true
-PB4.Signal=GPIO_Output
-PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=LED_F
-PB5.Locked=true
-PB5.Signal=GPIO_Output
-PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=LED_G
-PB6.Locked=true
-PB6.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -134,6 +124,8 @@ RCC.IPParameters=APB1Freq_Value,APB2Freq_Value,FamilyName,PLLCLKFreq_Value,PLLMC
 RCC.PLLCLKFreq_Value=8000000
 RCC.PLLMCOFreq_Value=4000000
 RCC.TimSysFreq_Value=8000000
+VP_SYS_VS_ND.Mode=No_Debug
+VP_SYS_VS_ND.Signal=SYS_VS_ND
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
